--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout
+    android:id="@+id/frame_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:animateLayoutChanges="true"
+    >
 
-    <ru.sbrf.sberwifi.ParallaxScrollListView
-        android:id="@+id/layout_listview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:cacheColorHint="@null"
-        android:duplicateParentState="true"
-        android:footerDividersEnabled="false"
-        android:headerDividersEnabled="false"
-        android:overScrollMode="never"
-        android:scrollbars="none"
-        android:scrollingCache="false" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+   <com.google.android.material.bottomnavigation.BottomNavigationView
+       android:id="@+id/bottom_navigation"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_gravity="bottom"
+       android:background="@color/colorPrimary"
+       app:itemIconTint="@color/nav_item_state_list"
+       app:itemTextColor="@color/nav_item_state_list"
+       app:menu="@menu/bottom_navigation_menu" />
+</FrameLayout>
