--- a/app/src/main/res/layout/listview_header.xml
+++ b/app/src/main/res/layout/listview_header.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -8,6 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/size_default_height"
         android:scaleType="centerCrop"
-        android:src="@drawable/sber"
+        app:srcCompat="@drawable/sber"
         android:contentDescription="@string/headerListView" />
 </RelativeLayout>
