--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,27 @@
     <color name="colorAccent">#D81B60</color>
     <color name="white">#FFFFFF</color>
     <color name="white_trans">#99FFFFFF</color>
+
+    <!-- grey_500 -->
+    <color name="regular">#9E9E9E</color>
+    <!-- blue_500 -->
+    <color name="selected">#2196F3</color>
+    <!-- grey_500 -->
+    <color name="channel">@color/regular</color>
+    <!-- cyan_500 -->
+    <color name="channel_number">#00BCD4</color>
+    <!-- cyan_700 -->
+    <color name="frequency">#0097A7</color>
+    <!-- blue_grey_500 -->
+    <color name="security">#607D8B</color>
+    <!-- teal_500 -->
+    <color name="distance">#009688</color>
+    <!-- red_500 -->
+    <color name="error">#F44336</color>
+    <!-- amber_500 -->
+    <color name="warning">#FFC107</color>
+    <!-- green_500 -->
+    <color name="success">#4CAF50</color>
+    <!-- background -->
+    <color name="background">#616161</color>
 </resources>
