Add dataModel for analytics WiFi - refactoring

--- a/app/src/main/res/layout/fragment_wifi.xml
+++ b/app/src/main/res/layout/fragment_wifi.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WiFiFragment">
+    tools:context=".fragment.WiFiFragment">
 
-    <ru.sbrf.sberwifi.ParallaxScrollListView
+    <ru.sbrf.sberwifi.view.ParallaxScrollListView
         android:id="@+id/layout_listwifi"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
