--- a/app/src/main/res/layout/wifi_list_menu.xml
+++ b/app/src/main/res/layout/wifi_list_menu.xml
@@ -9,6 +9,7 @@
 
     <TextView
         android:id="@+id/ssid_and_mac"
+        android:layout_gravity="fill"
         android:layout_row="0"
         android:layout_columnSpan="3"
         android:textAppearance="?attr/textAppearanceListItem"
@@ -38,20 +39,17 @@
             android:layout_marginEnd="4dp"
             android:text="@string/channel_short_name"
             android:textAppearance="?attr/textAppearanceListItemSecondary"
-            android:textColor="@color/channel">
-
-        </TextView>
+            android:textColor="@color/channel" />
 
         <TextView
             android:id="@+id/channel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="fill"
             android:layout_marginEnd="4dp"
             android:textAppearance="?attr/textAppearanceListItemSecondary"
             android:textColor="@color/channel_number"
-            android:textStyle="bold">
-
-        </TextView>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/primaryFrequency"
@@ -65,9 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
-            android:textColor="@color/frequency">
-
-        </TextView>
+            android:textColor="@color/frequency" />
 
         <TextView
             android:id="@+id/width"
@@ -89,34 +85,22 @@
 
     </ImageView>
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/capabilities"
+        android:layout_width="312dp"
         android:layout_row="2"
         android:layout_column="1"
         android:layout_columnSpan="2"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/securityImage"
-            android:layout_width="12dp"
-            android:layout_height="12dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="12dp"
-            android:contentDescription="@null" />
-
-        <TextView
-            android:id="@+id/capabilities"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/security"
-            android:textStyle="italic" />
-
-    </LinearLayout>
+        android:layout_columnWeight="0"
+        android:layout_gravity="fill_horizontal"
+        android:textColor="@color/security"
+        android:textStyle="italic" />
 
     <RatingBar
         android:id="@+id/channel_rating"
+        style="?android:attr/ratingBarStyleSmall"
         android:layout_column="1"
         android:layout_columnSpan="2"
-        style="?android:attr/ratingBarStyleSmall"
         android:textAppearance="?attr/textAppearanceListItemSecondary">
 
     </RatingBar>
