--- a/app/src/main/res/layout/wifi_list_menu.xml
+++ b/app/src/main/res/layout/wifi_list_menu.xml
@@ -1,108 +1,151 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:columnCount="3"
-    android:minHeight="?attr/listPreferredItemHeight"
-    android:orientation="horizontal"
-    android:paddingStart="?attr/listPreferredItemPaddingStart"
-    android:paddingEnd="?attr/listPreferredItemPaddingEnd">
+    android:orientation="horizontal">
 
+    <!-- Column 1 -->
     <TextView
-        android:id="@+id/ssid_and_mac"
-        android:layout_gravity="fill"
-        android:layout_row="0"
-        android:layout_columnSpan="3"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:textStyle="bold">
-
-    </TextView>
-
-    <TextView
-        android:id="@+id/level"
-        android:layout_width="wrap_content"
+        android:id="@+id/tab"
+        android:layout_width="24dp"
         android:layout_height="wrap_content"
-        android:layout_row="1"
-        android:layout_column="0"
-        android:layout_marginEnd="6dp">
+        android:visibility="gone" />
 
-    </TextView>
-
+    <!-- Column 2 -->
     <LinearLayout
-        android:layout_row="1"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <TextView
+        <!-- Row 1 -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:text="@string/channel_short_name"
-            android:textAppearance="?attr/textAppearanceListItemSecondary"
-            android:textColor="@color/channel" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/channel"
+            <TextView
+                android:id="@+id/ssid_and_mac"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="fill"
+                android:textAppearance="?attr/textAppearanceListItem"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <!-- Row 2 -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="fill"
-            android:layout_marginEnd="4dp"
-            android:textAppearance="?attr/textAppearanceListItemSecondary"
-            android:textColor="@color/channel_number"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/primaryFrequency"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:textColor="@color/frequency" />
+            <!-- Column 1  уровень сигнала и значок отображения-->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/channel_frequency_range"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:textColor="@color/frequency" />
+                <TextView
+                    android:id="@+id/level"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="6dp">
 
-        <TextView
-            android:id="@+id/width"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:textColor="@color/frequency" />
+                </TextView>
+
+                <ImageView
+                    android:id="@+id/levelImage"
+                    android:layout_width="50dp"
+                    android:layout_height="55dp"
+                    android:layout_gravity="center_vertical"
+                    android:contentDescription="@null">
+
+                </ImageView>
+
+            </LinearLayout>
+
+            <!-- Column 2 данные по каналу и безопасность протокола WiFi -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <!-- Row 1 описание канала, его ширина и частоты-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="4dp"
+                        android:text="@string/channel_short_name"
+                        android:textAppearance="?attr/textAppearanceListItemSecondary"
+                        android:textColor="@color/channel" />
+
+                    <TextView
+                        android:id="@+id/channel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="4dp"
+                        android:textAppearance="?attr/textAppearanceListItemSecondary"
+                        android:textColor="@color/channel_number"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/primaryFrequency"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="4dp"
+                        android:textColor="@color/frequency" />
+
+                    <TextView
+                        android:id="@+id/channel_frequency_range"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="4dp"
+                        android:textColor="@color/frequency" />
+
+                    <TextView
+                        android:id="@+id/width"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="4dp"
+                        android:textColor="@color/frequency" />
+                </LinearLayout>
+
+                <!-- Row 2 security канала-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/capabilities"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="0"
+                        android:textColor="@color/security"
+                        android:textStyle="italic" />
+                </LinearLayout>
+
+                <!-- Row 3 рейтинг канала -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="3dp"
+                    android:orientation="horizontal">
+
+                    <RatingBar
+                        android:id="@+id/channel_rating"
+                        style="?android:attr/ratingBarStyleSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?attr/textAppearanceListItemSecondary" />
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/levelImage"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_row="2"
-        android:layout_rowSpan="2"
-        android:layout_column="0"
-        android:layout_gravity="center_vertical"
-        android:contentDescription="@null">
-
-    </ImageView>
-
-    <TextView
-        android:id="@+id/capabilities"
-        android:layout_width="312dp"
-        android:layout_row="2"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_columnWeight="0"
-        android:layout_gravity="fill_horizontal"
-        android:textColor="@color/security"
-        android:textStyle="italic" />
-
-    <RatingBar
-        android:id="@+id/channel_rating"
-        style="?android:attr/ratingBarStyleSmall"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:textAppearance="?attr/textAppearanceListItemSecondary">
-
-    </RatingBar>
-
-</GridLayout>
+</LinearLayout>
