--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_menu"
+        android:id="@+id/navigation_wifi"
         android:icon="@drawable/ic_menu_black_24dp"
-        android:title="@string/item_menu_main" />
+        android:title="@string/item_wifi_main" />
     <item
         android:id="@+id/navigation_report"
         android:icon="@drawable/ic_report_black_24dp"
