--- a/app/src/main/res/layout/fragment_wifi.xml
+++ b/app/src/main/res/layout/fragment_wifi.xml
@@ -18,6 +18,7 @@
         android:scrollingCache="false"
         android:layoutAnimation="@anim/layout_animation_fall_down"
         android:divider="@drawable/separator_line"
-        android:dividerHeight="10.0dp" />
+        android:dividerHeight="10.0dp"
+        android:layout_marginBottom="46dp" />
 
 </FrameLayout>
